--- a/src/app/inicio/select-address/select-address.component.html
+++ b/src/app/inicio/select-address/select-address.component.html
@@ -4,7 +4,7 @@
   </button>
 </div>
 <div class="col-sm-12 text-center">
-    <img style="width: 61px;margin-top: -35px;" src="../../../assets/images/others/map2.png" alt="">
+    <img class="img" src="../../../assets/images/others/capaEnd.png" alt="">
 </div>
 
 <div class="col-sm-12" class="c1" *ngIf="service.getDadosUsuario().id">
@@ -33,7 +33,7 @@
         </mat-form-field>
 
         <div class="col-sm-12" style="overflow: auto;
-        height: 370px;">
+        height: 370px;padding: 0;">
             <div class="areaB" *ngIf="!service.getDadosUsuario().id">
 
 
