--- a/src/app/multLojas/selecionar-endereco-buscar-loja/selecionar-endereco-buscar-loja.component.css
+++ b/src/app/multLojas/selecionar-endereco-buscar-loja/selecionar-endereco-buscar-loja.component.css
@@ -84,8 +84,19 @@
     color: #673ab7;
 }
 
+.imgo2 {
+    display: none;
+    margin: auto;
+}
+
 @media (max-width:600px) {
     .fds {
         width: 88%;
+    }
+    .imgo {
+        display: none;
+    }
+    .imgo2 {
+        display: block;
     }
 }
