--- a/src/app/multLojas/selecionar-endereco-buscar-loja/selecionar-endereco-buscar-loja.component.html
+++ b/src/app/multLojas/selecionar-endereco-buscar-loja/selecionar-endereco-buscar-loja.component.html
@@ -4,7 +4,8 @@
 
 <div class="c">
     <div>
-        <img width="60px" src="../../../assets/images/others/map2.png" alt="">
+        <img class="imgo" width="345px" src="../../../assets/images/others/capaEnd.png" alt="">
+        <img class="imgo2" width="60px" src="../../../assets/images/others/map2.png" alt="">
     </div>
     <div class="pik">
         Onde você quer receber seu pedido?
