--- a/src/app/conta_usuario/notifications/notifications.component.css
+++ b/src/app/conta_usuario/notifications/notifications.component.css
@@ -15,6 +15,8 @@
 
 .item {
     border-top: 1px solid #ece9e9;
-    margin-top: 20px;
+    margin-top: 0px;
     padding-top: 20px;
+    margin-bottom: 27px;
+    font-size: 12px;
 }
