--- a/src/app/inicio/home/home.component.css
+++ b/src/app/inicio/home/home.component.css
@@ -1,6 +1,9 @@
 .a {
     height: 100vh;
     background: #e11212;
+    background-image: url('/assets/images/others/capaHome.png');
+    background-repeat: no-repeat;
+    background-position: bottom;
 }
 
 .b {
@@ -46,7 +49,7 @@
     font-size: 18px;
     /* -webkit-box-shadow: 9px 7px 5px rgba(50, 50, 50, 0.77); */
     -moz-box-shadow: 9px 7px 5px rgba(50, 50, 50, 0.77);
-    box-shadow: 0px 1px 7px rgb(0 0 0 / 19%);
+    box-shadow: 0px 2px 14px rgb(0 0 0 / 77%);
 }
 
 .btSearh {
