--- a/src/app/inicio/select-address/select-address.component.css
+++ b/src/app/inicio/select-address/select-address.component.css
@@ -67,3 +67,15 @@ mat-form-field {
     display: flex;
     gap: 10px;
 }
+
+.img {
+    width: 284px;
+    margin-top: -35px;
+}
+
+@media (max-width:600px) {
+    .img {
+        width: 100%;
+        margin-top: -35px;
+    }
+}
