--- a/src/app/payment-steps/finish/finish.component.html
+++ b/src/app/payment-steps/finish/finish.component.html
@@ -110,7 +110,7 @@
                 </div>
 
                 <div class="row" [formGroup]="form">
-                    <input formControlName="obspedido" class="styleobs" type="text" placeholder="Observação para o pedido. Ex.: Deixar o pedido na recepção.">
+                    <input formControlName="obspedido" class="styleobs" type="text" placeholder="Observação para a entrega.">
                 </div>
 
                 <div class="col-sm-12 pa">
