--- a/src/app/conta_usuario/adresses/form-address/form-address.component.html
+++ b/src/app/conta_usuario/adresses/form-address/form-address.component.html
@@ -1,15 +1,16 @@
-<div class="row" [formGroup]="form">
+<div style="height: 100vh;">
+    <div class="row" [formGroup]="form">
 
-    <div class="col-sm-12">
-        <h2> Novo endereço </h2>
-        <mat-form-field>
-            <mat-label> Nome do endereço </mat-label>
-            <input formControlName="nomeendereco" matInput placeholder="Minha casa">
-        </mat-form-field>
-    </div>
+        <div class="col-sm-12">
+            <h2> Novo endereço </h2>
+            <mat-form-field>
+                <mat-label> Nome do endereço </mat-label>
+                <input formControlName="nomeendereco" matInput placeholder="Minha casa">
+            </mat-form-field>
+        </div>
 
-    <div class="col-sm-6">
-        <!--<mat-form-field>
+        <div class="col-sm-6">
+            <!--<mat-form-field>
             <input type="text" placeholder="Cidade" aria-label="Number" matInput [matAutocomplete]="auto">
             <mat-autocomplete #auto="matAutocomplete">
                 <mat-option *ngFor="let option of options" [value]="option.nome" (click)="selectCity(option)">
@@ -17,18 +18,18 @@
                 </mat-option>
             </mat-autocomplete>
         </mat-form-field>-->
-        <mat-form-field appearance="fill">
-            <mat-label>Cidade</mat-label>
-            <mat-select>
-                <mat-option *ngFor="let option of options" [value]="option.nome" (click)="selectCity(option)">
-                    {{ option.nome }}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
-    </div>
+            <mat-form-field appearance="fill">
+                <mat-label>Cidade</mat-label>
+                <mat-select formControlName="cidade">
+                    <mat-option *ngFor="let option of options" [value]="option">
+                        {{ option.nome }}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
 
-    <div class="col-sm-6">
-        <!--<mat-form-field>
+        <div class="col-sm-6">
+            <!--<mat-form-field>
             <input [disabled]="!statusCity" type="text" placeholder="Bairros" aria-label="Number" matInput [matAutocomplete]="matAutocompleteN">
             <mat-autocomplete #matAutocompleteN="matAutocomplete">
                 <mat-option *ngFor="let option of neighborhoods" [value]="option.nome" (click)="selectNeigh(option)">
@@ -36,47 +37,48 @@
                 </mat-option>
             </mat-autocomplete>
         </mat-form-field>-->
-        <mat-form-field appearance="fill">
-            <mat-label>Bairro</mat-label>
-            <mat-select>
-                <mat-option *ngFor="let option of neighborhoods" [value]="option.nome" (click)="selectNeigh(option)">
-                    {{ option.nome }}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
+            <mat-form-field appearance="fill">
+                <mat-label>Bairro</mat-label>
+                <mat-select formControlName="bairro">
+                    <mat-option *ngFor="let option of neighborhoods" [value]="option.nome">
+                        {{ option.nome }}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+
+        <div class="col-sm-9">
+            <mat-form-field>
+                <mat-label> Rua </mat-label>
+                <input formControlName="rua" matInput placeholder="Rua/Avenida">
+            </mat-form-field>
+        </div>
+
+        <div class="col-sm-3">
+            <mat-form-field>
+                <mat-label> Número </mat-label>
+                <input formControlName="numero" matInput placeholder="222 A">
+            </mat-form-field>
+        </div>
+
+        <div class="col-sm-12">
+            <mat-form-field>
+                <mat-label> Complemento </mat-label>
+                <input formControlName="complemento" matInput placeholder=" Casa ">
+            </mat-form-field>
+        </div>
+
+        <div class="col-sm-12">
+            <mat-form-field>
+                <mat-label> Ponto de referência </mat-label>
+                <input formControlName="tiporesidencia" matInput placeholder=" Próximo ao shopping ">
+            </mat-form-field>
+        </div>
+
     </div>
 
-    <div class="col-sm-9">
-        <mat-form-field>
-            <mat-label> Rua </mat-label>
-            <input formControlName="rua" matInput placeholder="Rua/Avenida">
-        </mat-form-field>
+    <div class="col-sm-12 text-right" style="display: flex;padding: 0;">
+        <button mat-stroked-button color="warn" mat-dialog-close> Fechar </button>
+        <button [disabled]="statusbt" mat-flat-button color="warn" (click)="onClickSalvar()" style="margin-left: 5px;"> Salvar novo endereço</button>
     </div>
-
-    <div class="col-sm-3">
-        <mat-form-field>
-            <mat-label> Número </mat-label>
-            <input formControlName="numero" matInput placeholder="222 A">
-        </mat-form-field>
-    </div>
-
-    <div class="col-sm-12">
-        <mat-form-field>
-            <mat-label> Complemento </mat-label>
-            <input formControlName="complemento" matInput placeholder=" Casa ">
-        </mat-form-field>
-    </div>
-
-    <div class="col-sm-12">
-        <mat-form-field>
-            <mat-label> Ponto de referência </mat-label>
-            <input formControlName="tiporesidencia" matInput placeholder=" Próximo ao shopping ">
-        </mat-form-field>
-    </div>
-
-</div>
-
-<div class="col-sm-12 text-right">
-    <button mat-stroked-button color="warn" mat-dialog-close> Fechar </button>
-    <button [disabled]="statusbt" mat-flat-button color="warn" (click)="onClickSalvar()" style="margin-left: 5px;"> Salvar novo endereço</button>
 </div>
