--- a/src/app/inicio/itens-merchant/itens-merchant.component.css
+++ b/src/app/inicio/itens-merchant/itens-merchant.component.css
@@ -380,13 +380,17 @@
 }
 
 .icprom {
-    background: #dc1414;
-    width: 82px;
+    background: #009688;
+    width: 110px;
     padding: 5px;
     font-size: 13px;
-    border-radius: 4px;
+    border-radius: 3px;
     text-align: center;
     color: white;
+    display: grid;
+    align-items: center;
+    align-content: center;
+    grid-template-columns: 1fr 2fr;
 }
 
 .icstatusOFF {
@@ -397,6 +401,10 @@
     border-radius: 2px;
     padding: 5px;
     font-size: 13px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
 }
 
 .icstatus {
@@ -407,6 +415,10 @@
     border-radius: 2px;
     padding: 5px;
     font-size: 13px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
 }
 
 @-webkit-keyframes snowman {
