--- a/src/app/multLojas/lojas/icone-loja/icone-loja.component.css
+++ b/src/app/multLojas/lojas/icone-loja/icone-loja.component.css
@@ -54,7 +54,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: 80px 80px;
-    border-radius: 50%;
+    border-radius: 5%;
 }
 
 .desc2 {
@@ -73,6 +73,7 @@
     color: rgb(124, 124, 124);
     display: grid;
     grid-template-columns: 3fr 2fr;
+    font-size: 12px;
 }
 
 .logo {
@@ -166,7 +167,7 @@
     display: grid;
     align-items: center;
     text-align: center;
-    border-radius: 50%;
+    border-radius: 5%;
     font-weight: 600;
     color: white;
 }
@@ -199,6 +200,25 @@
 }
 
 @media (max-width:600px) {
+    .descricao {
+        padding-left: 7px;
+        margin-left: 7px;
+    }
+    .desc3 {
+        grid-template-columns: 2fr 2fr;
+    }
+    .logo {
+        padding-left: 0px;
+    }
+    .loja {
+        gap: 5px;
+        padding: 10px;
+        border-radius: 0px;
+        padding-bottom: 15px;
+        color: #2196F3;
+        border: none;
+        border-bottom: 1px solid #e6e6e678;
+    }
     .areaStores {
         grid-template-columns: 1fr;
     }
