Update design app

--- a/src/app/inicio/capa/capa.component.css
+++ b/src/app/inicio/capa/capa.component.css
@@ -103,7 +103,7 @@
         height: 55px;
         z-index: 9;
         background: white;
-        background: #dc1709;
+        background: #000000;
         /* display: flex; */
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
