--- a/src/app/inicio/itens-merchant/itens-merchant.component.html
+++ b/src/app/inicio/itens-merchant/itens-merchant.component.html
@@ -1,231 +1,247 @@
 <div class="col-sm-12 mp0R bMobile">
-    <!--*ngIf="service.getStatusLoaderStore()" -->
-    <div class="col-sm-12 mp0L bMobile" style="padding-right: 0px;">
+  <!--*ngIf="service.getStatusLoaderStore()" -->
+  <div class="col-sm-12 mp0L bMobile" style="padding-right: 0px;">
 
-        <div *ngIf="service.getDadosEmpresa().capa" class="col-sm-12 mp0L bMobile hiddenEl" style="padding-right: 0px;">
-            <div class="capa col-sm-12 mp0L" [lazyLoad]="service.getDadosEmpresa().capa">
-            </div>
-        </div>
+    <div *ngIf="service.getDadosEmpresa().capa" class="col-sm-12 mp0L bMobile hiddenEl" style="padding-right: 0px;">
+      <div class="capa col-sm-12 mp0L" [lazyLoad]="service.getDadosEmpresa().capa">
+      </div>
+    </div>
 
-        <div class="c1 col-sm-12 mp0L dad">
-            <div>
-                <ngx-skeleton-loader animation="progress" *ngIf="!service.getDadosEmpresa().nome"></ngx-skeleton-loader>
-                {{ service.getDadosEmpresa().nome }}
-            </div>
+    <div class="c1 col-sm-12 mp0L dad">
+      <div>
+        <ngx-skeleton-loader animation="progress" *ngIf="!service.getDadosEmpresa().nome"></ngx-skeleton-loader>
+        {{ service.getDadosEmpresa().nome }}
+      </div>
 
-            <div class="col-sm-12 mp0L dad astr" style="font-size: 13px;">
-                <ngx-skeleton-loader animation="progress" *ngIf="!service.getDadosEmpresa().nome"></ngx-skeleton-loader>
-                <mat-icon class="cor1" *ngIf="service.getDadosEmpresa().nome">star</mat-icon><span class="cor1">
+      <div class="col-sm-12 mp0L dad astr" style="font-size: 13px;">
+        <ngx-skeleton-loader animation="progress" *ngIf="!service.getDadosEmpresa().nome"></ngx-skeleton-loader>
+        <mat-icon class="cor1" *ngIf="service.getDadosEmpresa().nome">star</mat-icon><span class="cor1">
           {{ service.getDadosEmpresa().nota.nota }}
-        </span> <span class="hiddenEl styleAvals" style="color: rgb(105, 105, 105);" *ngIf="service.getDadosEmpresa().nome">
+        </span> <span class="hiddenEl styleAvals" style="color: rgb(105, 105, 105);"
+          *ngIf="service.getDadosEmpresa().nome">
           {{ service.getDadosEmpresa().nota.totalavals }} Avaliações
         </span>
+      </div>
+
+    </div>
+
+    <div class="c2 col-sm-12 mp0L dad">
+      <ngx-skeleton-loader animation="progress" *ngIf="!service.getDadosEmpresa().nome"></ngx-skeleton-loader>
+      {{ service.getDadosEmpresa().descricao }}
+    </div>
+
+    <div class="c3 col-sm-12 mp0L dad" *ngIf="service.getDadosEmpresa().nome">
+      <!--{{ service.getDadosEmpresa().seguimento }} • {{ service.getDadosEmpresa().tempoentrega }}-->
+      <div class="icstatus" *ngIf="service.getDadosEmpresa().status_delivery === true"> Aberto </div>
+      <div class="icstatusOFF offs" *ngIf="service.getDadosEmpresa().status_delivery === false"> Fechado </div>
+
+      <div class="icprom"
+        *ngIf="service.getDadosEmpresa().desconto && service.getDadosEmpresa().desconto.statusPromocao">
+        <mat-icon class="mat-18">local_offer</mat-icon> {{ service.getDadosEmpresa().desconto.desconto }}% OFF
+      </div>
+    </div>
+
+
+    <div class="c4 col-sm-12 mp0L" style="margin-bottom: 10px;" *ngIf="service.showInfoStore">
+
+      <div class="example-action-buttons">
+      </div>
+      <mat-accordion class="example-headers-align" multi>
+
+        <mat-expansion-panel>
+
+          <mat-expansion-panel-header class="guinb">
+            <mat-panel-title>
+              Informações da loja
+            </mat-panel-title>
+            <mat-panel-description>
+
+            </mat-panel-description>
+          </mat-expansion-panel-header>
+
+          <app-info [dadosEmpresa]="service.getDadosEmpresa()"></app-info>
+
+        </mat-expansion-panel>
+
+
+
+      </mat-accordion>
+
+    </div>
+
+    <div>
+      <div class="cmovi" id="cmovi">
+        <div id="toolb-delsuc" class="toolb-delsuc">
+          <div>
+            <button mat-icon-button color="warn" routerLink="/lojas" *ngIf="service.sistemMultStores === true">
+              <mat-icon size="18">keyboard_arrow_left</mat-icon>
+            </button>
+          </div>
+          <div> {{service.getDadosEmpresa().nome}} </div>
+          <div>
+            <!--<mat-icon class="mat-18">search</mat-icon>-->
+          </div>
+        </div>
+        <div class="caixa-cats-catalogo" id="caixa-cats-catalogo">
+          <span *ngFor="let item of service.getDadosEmpresa().categorias">
+            <div [class.itemSele]="item.selecionado" *ngIf="item.esconder === false" class="caixa-cats-catalogo-item" (click)="clickMenuCat(item)">
+              {{ item.nome }}
             </div>
-
+          </span>
         </div>
+      </div>
 
-        <div class="c2 col-sm-12 mp0L dad">
-            <ngx-skeleton-loader animation="progress" *ngIf="!service.getDadosEmpresa().nome"></ngx-skeleton-loader>
-            {{ service.getDadosEmpresa().descricao }}
+
+      <span class="filtromobile" [formGroup]="formProd">
+        <div class="pindow" style="margin-top: 1px;">
+          <div style="margin-left: 15px;display: flex;">
+            <mat-icon style="color: rgb(230, 24, 24);" class="mat-18">search</mat-icon>
+          </div>
+          <input formControlName="filtro" class="iseff" placeholder="Buscar no catálogo" #filterProduct>
         </div>
+      </span>
 
-        <div class="c3 col-sm-12 mp0L dad" *ngIf="service.getDadosEmpresa().nome">
-            <!--{{ service.getDadosEmpresa().seguimento }} • {{ service.getDadosEmpresa().tempoentrega }}-->
-            <div class="icstatus" *ngIf="service.getDadosEmpresa().status_delivery === true"> Aberto </div>
-            <div class="icstatusOFF offs" *ngIf="service.getDadosEmpresa().status_delivery === false"> Fechado </div>
-
-            <div class="icprom" *ngIf="service.getDadosEmpresa().desconto && service.getDadosEmpresa().desconto.statusPromocao">
-                <mat-icon class="mat-18">local_offer</mat-icon> {{ service.getDadosEmpresa().desconto.desconto }}% OFF </div>
-        </div>
-
-
-        <div class="c4 col-sm-12 mp0L" style="margin-bottom: 10px;" *ngIf="service.showInfoStore">
-
-            <div class="example-action-buttons">
-            </div>
-            <mat-accordion class="example-headers-align" multi>
-
-                <mat-expansion-panel>
-
-                    <mat-expansion-panel-header class="guinb">
-                        <mat-panel-title>
-                            Informações da loja
-                        </mat-panel-title>
-                        <mat-panel-description>
-
-                        </mat-panel-description>
-                    </mat-expansion-panel-header>
-
-                    <app-info [dadosEmpresa]="service.getDadosEmpresa()"></app-info>
-
-                </mat-expansion-panel>
-
-
-
-            </mat-accordion>
-
-        </div>
-
-        <div>
-            <div class="cmovi" id="cmovi">
-                <div id="toolb-delsuc" class="toolb-delsuc">
-                    <div>
-                        <button mat-icon-button color="warn" routerLink="/lojas" *ngIf="service.sistemMultStores === true">
-                        <mat-icon size="18">keyboard_arrow_left</mat-icon>
-                      </button>
-                    </div>
-                    <div> {{service.getDadosEmpresa().nome}} </div>
-                    <div>
-                        <!--<mat-icon class="mat-18">search</mat-icon>-->
-                    </div>
-                </div>
-                <div class="caixa-cats-catalogo" id="caixa-cats-catalogo">
-                    <div [class.itemSele]="item.selecionado" class="caixa-cats-catalogo-item" *ngFor="let item of service.getDadosEmpresa().categorias" (click)="clickMenuCat(item)"> {{ item.nome }}
-                    </div>
-                </div>
-            </div>
-
-
-            <span class="filtromobile" [formGroup]="formProd">
-               <div class="pindow" style="margin-top: 1px;">
-                <div style="margin-left: 15px;display: flex;">
-                    <mat-icon style="color: rgb(230, 24, 24);" class="mat-18">search</mat-icon>
-                </div>
-                <input formControlName="filtro" class="iseff" placeholder="Buscar no catálogo" #filterProduct>
-            </div>
-            </span>
-
-
-        </div>
-
-
-        <!--Filtros-->
-        <div class="col-sm-12 cata">
-            <div class="row">
-                <div class="col-sm-12 row picks">
-
-                    <div class="guinhorico">
-                        <mat-icon style="color: red;" class="mat-18">search</mat-icon>
-                        <div [formGroup]="formProd">
-                            <input formControlName="filtro" class="stylein" type="name" placeholder="Buscar no catálogo">
-                        </div>
-                    </div>
-
-                </div>
-
-            </div>
-        </div>
-        <!--Filtros-->
 
     </div>
 
 
-    <!--Produtos para descktop-->
-    <div class="row mp0R bMobile hiddenEl">
-        <ngx-skeleton-loader animation="progress" *ngIf="!service.getDadosEmpresa().nome"></ngx-skeleton-loader>
-        <div class="col-sm-12 mp0R" *ngFor="let item of service.getDadosEmpresa().categorias">
-            <!-- | name:catalogoFilter.value.filtro -->
-            <div class="aicn col-sm-12" [id]="'categoria_' + item.id"> {{ item.nome }} </div>
-            <div class="row mp0R">
-                <div style="padding: 10px;" class="col-sm-6 " *ngFor="let product of item.itens | filterId:formProd.controls.filtro.value">
-                    <a href="javascript:;" style="text-decoration: none;">
-                        <div class="item col-sm-12" (click)="openItem(product)" [id]="'itemloja_' + product.id">
-                            <div class="row">
+    <!--Filtros-->
+    <div class="col-sm-12 cata">
+      <div class="row">
+        <div class="col-sm-12 row picks">
 
-
-                                <div class="col-sm-7">
-                                    <div class="item-01">
-                                        <ngx-skeleton-loader animation="progress" *ngIf="!product.nome"></ngx-skeleton-loader>
-                                        {{ product.nome | slice:0:40}}
-                                    </div>
-                                    <div class="item-02">
-                                        <ngx-skeleton-loader animation="progress" *ngIf="!product.nome"></ngx-skeleton-loader>
-                                        {{ product.descricao }}
-                                    </div>
-                                    <div class="item-03">
-                                        <div>
-                                            <ngx-skeleton-loader animation="progress" *ngIf="!product.nome"></ngx-skeleton-loader>
-                                            {{ product.preco | currency:'BRL' }}
-                                        </div>
-                                        <div>
-                                            <div class="item033ind" *ngIf="product.esgotado || product.esconder">
-                                                <mat-icon>info</mat-icon> Indisponível
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-sm-5">
-                                    <div class="item-bg-img" [class.product_unavailable]="product.esgotado || product.esconder" [defaultImage]="service.defaultImage" [lazyLoad]="product.imagem"></div>
-                                </div>
-
-                            </div>
-
-
-                        </div>
-                    </a>
-                </div>
-
-
+          <div class="guinhorico">
+            <mat-icon style="color: red;" class="mat-18">search</mat-icon>
+            <div [formGroup]="formProd">
+              <input formControlName="filtro" class="stylein" type="name" placeholder="Buscar no catálogo">
             </div>
-
+          </div>
 
         </div>
 
+      </div>
     </div>
+    <!--Filtros-->
 
-    <!--produtos para mobile-->
+  </div>
 
-    <div [id]="'cat_id_' + item.id" *ngFor="let item of service.getDadosEmpresa().categorias | name:catalogoFilter.value.filtro" class="elementMobileShow">
-        <div class="stycatItem">
-            {{ item.nome }}
-        </div>
 
-        <div class="itemProduct" *ngFor="let product of item.itens | filterId:filterProduct.value" (click)="openItem(product)">
-            <div class="adate-ite">
-                <div class="idescpod">
-                    <div class="inameprod"> {{ product.nome | slice:0:26}}
-                        <ngx-skeleton-loader animation="progress" *ngIf="!service.getDadosEmpresa().nome"></ngx-skeleton-loader>
+  <!--Produtos para descktop-->
+  <div class="row mp0R bMobile hiddenEl">
+    <ngx-skeleton-loader animation="progress" *ngIf="!service.getDadosEmpresa().nome"></ngx-skeleton-loader>
+    <div class="col-sm-12 mp0R" *ngFor="let item of service.getDadosEmpresa().categorias">
+      <!-- | name:catalogoFilter.value.filtro -->
+      <span *ngIf="item.esconder === false">
+        <div class="aicn col-sm-12" [id]="'categoria_' + item.id"> {{ item.nome }} </div>
+        <div class="row mp0R">
+
+          <span>
+
+          </span>
+          <div style="padding: 10px;" class="col-sm-6 "
+            *ngFor="let product of item.itens | filterId:formProd.controls.filtro.value" [class.hidItem]="product.esconder === true">
+            <a href="javascript:;" style="text-decoration: none;" *ngIf="product.esconder === false">
+              <div class="item col-sm-12" (click)="openItem(product)" [id]="'itemloja_' + product.id">
+                <div class="row">
+
+
+                  <div class="col-sm-7">
+                    <div class="item-01">
+                      <ngx-skeleton-loader animation="progress" *ngIf="!product.nome"></ngx-skeleton-loader>
+                      {{ product.nome | slice:0:40}}
                     </div>
-                    <div class="idescrod">
-                        <ngx-skeleton-loader animation="progress" *ngIf="!service.getDadosEmpresa().nome"></ngx-skeleton-loader>
-                        {{ product.descricao | slice:0:160 }}
+                    <div class="item-02">
+                      <ngx-skeleton-loader animation="progress" *ngIf="!product.nome"></ngx-skeleton-loader>
+                      {{ product.descricao }}
+                    </div>
+                    <div class="item-03">
+                      <div>
+                        <ngx-skeleton-loader animation="progress" *ngIf="!product.nome"></ngx-skeleton-loader>
+                        {{ product.preco | currency:'BRL' }}
+                      </div>
+                      <div>
                         <div class="item033ind" *ngIf="product.esgotado || product.esconder">
-                            <mat-icon>info</mat-icon> Indisponível
-                            <ngx-skeleton-loader animation="progress" *ngIf="!service.getDadosEmpresa().nome"></ngx-skeleton-loader>
+                          <mat-icon>info</mat-icon> Indisponível
                         </div>
+                      </div>
                     </div>
+                  </div>
+
+                  <div class="col-sm-5">
+                    <div class="item-bg-img" [class.product_unavailable]="product.esgotado || product.esconder"
+                      [defaultImage]="service.defaultImage" [lazyLoad]="product.imagem"></div>
+                  </div>
+
                 </div>
-                <div class="iimgpod" id="snowman" [class.product_unavailable]="product.esgotado || product.esconder" [defaultImage]="service.defaultImage" [lazyLoad]="product.imagem"> </div>
-            </div>
 
-            <div class="ipriceprod">
-                {{ product.preco | currency:'BRL' }}
-                <ngx-skeleton-loader animation="progress" *ngIf="!service.getDadosEmpresa().nome"></ngx-skeleton-loader>
-            </div>
-            <div class="lineitea"></div>
+
+              </div>
+            </a>
+          </div>
+
         </div>
-    </div>
-    <!--produtos para mobile-->
 
-
-    <div class="col-sm-12 bMobile" style="margin-top:100px;">
-        <mat-divider></mat-divider>
+      </span>
     </div>
 
+  </div>
+
+  <!--produtos para mobile-->
+
+  <div [id]="'cat_id_' + item.id"
+    *ngFor="let item of service.getDadosEmpresa().categorias | name:catalogoFilter.value.filtro"
+    class="elementMobileShow" [class.hidItem]="item.esconder === true">
+    <div class="stycatItem">
+      {{ item.nome }}
+    </div>
+
+    <div class="itemProduct" *ngFor="let product of item.itens | filterId:filterProduct.value"
+      (click)="openItem(product)" [class.hidItem]="product.esconder === true">
+      <div class="adate-ite">
+        <div class="idescpod">
+          <div class="inameprod"> {{ product.nome | slice:0:26}}
+            <ngx-skeleton-loader animation="progress" *ngIf="!service.getDadosEmpresa().nome"></ngx-skeleton-loader>
+          </div>
+          <div class="idescrod">
+            <ngx-skeleton-loader animation="progress" *ngIf="!service.getDadosEmpresa().nome"></ngx-skeleton-loader>
+            {{ product.descricao | slice:0:160 }}
+            <div class="item033ind" *ngIf="product.esgotado || product.esconder">
+              <mat-icon>info</mat-icon> Indisponível
+              <ngx-skeleton-loader animation="progress" *ngIf="!service.getDadosEmpresa().nome"></ngx-skeleton-loader>
+            </div>
+          </div>
+        </div>
+        <div class="iimgpod" id="snowman" [class.product_unavailable]="product.esgotado || product.esconder"
+          [defaultImage]="service.defaultImage" [lazyLoad]="product.imagem"> </div>
+      </div>
+
+      <div class="ipriceprod">
+        {{ product.preco | currency:'BRL' }}
+        <ngx-skeleton-loader animation="progress" *ngIf="!service.getDadosEmpresa().nome"></ngx-skeleton-loader>
+      </div>
+      <div class="lineitea"></div>
+    </div>
+  </div>
+  <!--produtos para mobile-->
+
+
+  <div class="col-sm-12 bMobile" style="margin-top:100px;">
+    <mat-divider></mat-divider>
+  </div>
+
+  <div class="col-sm-12">
+
+    <div class="a-assessments bMobile mp0R mp0L">
+      <app-assessments></app-assessments>
+    </div>
+
+  </div>
+
+  <div class="row bMobile">
     <div class="col-sm-12">
-
-        <div class="a-assessments bMobile mp0R mp0L">
-            <app-assessments></app-assessments>
-        </div>
-
+      <app-footer></app-footer>
     </div>
 
-    <div class="row bMobile">
-        <div class="col-sm-12">
-            <app-footer></app-footer>
-        </div>
-
-    </div>
+  </div>
 
 </div>
