Ajustes em funções e design

--- a/src/app/inicio/capa/capa.component.css
+++ b/src/app/inicio/capa/capa.component.css
@@ -110,6 +110,8 @@
         align-items: center;
         /*justify-content: space-around;*/
         justify-items: center;
+
+        display: none;
     }
     .c {
         border-bottom: none;
