--- a/src/app/inicio/item-details/item-details.component.html
+++ b/src/app/inicio/item-details/item-details.component.html
@@ -111,7 +111,7 @@
             </div>
 
         </div>
-        <div class="col-sm-12 mp0R">
+        <div class="col-sm-12 mp0R" style="padding-left: 2px;">
             <div class="ffo">
                 <!--<button mat-stroked-button color="warn" routerLink="/" style="margin-right: 10px;">Cancelar</button>-->
 
