--- a/src/app/inicio/item-details/item-details.component.css
+++ b/src/app/inicio/item-details/item-details.component.css
@@ -120,7 +120,7 @@
 
 .carcara {
     padding: 40px;
-    border-bottom: 1px solid #f1e8e8;
+    border-bottom: none;
 }
 
 .aabtsds {
@@ -143,16 +143,23 @@
 }
 
 @media (max-width:600px) {
+
+  .ffo[_ngcontent-yck-c134] {
+     border-top: none;
+}
+
+
     .styleGuinhoa {
         /*margin-top: -41.1%;*/
     }
     .img-prod-mobile {
         display: block;
+        height: 333px;
     }
     .img-item-prod {
-        height: 454px;
+        height: 290px;
         background-repeat: no-repeat;
-        background-size: 100%;
+        background-size: 100% 100%;
         background-position: center;
         border-radius: 0;
         position: relative;
@@ -189,6 +196,7 @@
         width: 100%;
         padding-left: 5px;
         padding-right: 5px;
+        gap: 8px;
     }
     .optadd {
         height: 54px;
